# AbBFN2

./: .gitignore  Dockerfile  MODEL-LICENSE.md  Makefile  README.md  environment.yaml  pyproject.toml
experiments/: humanization.py  inpaint.py  unconditional.py
experiments/configs/: humanization.yaml  inpaint.yaml  unconditional.yaml
experiments/configs/run/: run.yaml
igblast/human_db/: human_imgt_j_db.phr  human_imgt_j_db.pin  human_imgt_j_db.pjs  human_imgt_j_db.pos  human_imgt_j_db.psq  human_imgt_v_db.phr  human_imgt_v_db.pin  human_imgt_v_db.pjs  human_imgt_v_db.pog  human_imgt_v_db.pos  human_imgt_v_db.pot  human_imgt_v_db.psq  human_imgt_v_db.pto  j_genes.fasta  j_genes_clean.fasta  v_genes.fasta  v_genes_clean.fasta
src/abbfn2/: huggingface.py
src/abbfn2/bfn/: __init__.py  base.py  continuous.py  discrete.py  factory.py  multimodal.py  types.py
src/abbfn2/bfn/output_network/: heads.py  model.py  noise_schedules.py
src/abbfn2/data_mode_handler/: __init__.py  base.py  utils.py
src/abbfn2/data_mode_handler/continuous/: scalar.py
src/abbfn2/data_mode_handler/oas_paired/: cdr_length_discrete.py  constants.py  gene_family.py  genes.py  l_locus.py  species.py  tap_flags.py
src/abbfn2/data_mode_handler/sequence/: __init__.py  sequence.py  utils.py
src/abbfn2/data_mode_handler/sequence_length/: discrete.py
src/abbfn2/sample/: functions.py  inpaint_masks.py  schedule.py
src/abbfn2/utils/: igblast.py  inference_utils.py  pre_humanisation.py
